better vs code support